--- a/SingleCourseWebApp/course/templates/course/adminpage/admin_base.html
+++ b/SingleCourseWebApp/course/templates/course/adminpage/admin_base.html
@@ -8,10 +8,15 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" 
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+          integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+          crossorigin="anonymous" 
+          referrerpolicy="no-referrer" />
     <!-- Custom CSS -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'course/css/admin/admin.css' %}">
+    <link rel="stylesheet" href="{% static 'course/css/footer.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
@@ -28,7 +33,11 @@
                 </a>
                 <a href="{% url 'course:admin_dashboard' %}?tab=email" 
                    class="nav-item {% if active_tab == 'email' %}active{% endif %}">
-                    <i class="fas fa-envelope"></i> E-Mail-Service
+                    <i class="fas fa-envelope"></i> Informations-Service
+                </a>
+                <a href="{% url 'course:admin_dashboard' %}?tab=tickets" 
+                   class="nav-item {% if active_tab == 'tickets' %}active{% endif %}">
+                    <i class="fas fa-ticket-alt"></i> Ticket System
                 </a>
                 <a href="{% url 'course:home' %}" class="nav-item">
                     <i class="fas fa-arrow-left"></i> Zurück zur Startseite
@@ -39,6 +48,8 @@
         <!-- Main Content Area -->
         <div class="admin-main">
             {% block admin_content %}{% endblock %}
+            
+            {% include 'course/footer.html' %}
         </div>
     </div>
 
