--- a/SingleCourseWebApp/course/templates/course/editcourse/base.html
+++ b/SingleCourseWebApp/course/templates/course/editcourse/base.html
@@ -8,16 +8,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     {% load static %}
     <link rel="stylesheet" href="{% static 'course/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'course/css/footer.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
     {% block content %}{% endblock %}
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; {% now "Y" %} Single Course Web App. All rights reserved.</p>
-        </div>
-    </footer>
+    {% include 'course/footer.html' %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     {% block extra_js %}{% endblock %}
