--- a/SingleCourseWebApp/course/templates/course/submissions/dashboard_base.html
+++ b/SingleCourseWebApp/course/templates/course/submissions/dashboard_base.html
@@ -9,11 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- DataTables CSS -->
     <link href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'course/css/submissions/dashboard.css' %}">
+    <link rel="stylesheet" href="{% static 'course/css/footer.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
@@ -40,5 +42,7 @@
     <!-- ACE Editor -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js"></script>
     {% block extra_js %}{% endblock %}
+    
+    {% include 'course/footer.html' %}
 </body>
 </html> 
